--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">NavigationPlayground</string>
+    <string name="app_name">Navigation Playground</string>
+
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="website">Website</string>
 </resources>
